<resources>
    <string name="app_name">laCAT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_ip">Refresh IP</string>
    <string name="ip">IP</string>
    <string name="ping">Ping</string>
    <string name="pingingwait">---Please, wait---</string>
    <string name="number_of_packets">Number of packets:</string>
    <string name="ip_or_url">IP or url</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="title_activity_html_edit">Edit the webpage source coude</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="done">Done</string>

    <string name="no_connectivity">No connectivity</string>
    <string name="no_text">Please enter an ip or URL</string>
    <string name="no_ping">Incorect URL</string>
    <string name="string_test">test</string>
    <string name="error">An error occurred, please try again</string>
    <string name="timeout">Timeout</string>
    <string name="placeholder">www.google.com</string>
    <string name="activity_button">Trace</string>
    <string name="traceroute">Traceroute</string>
    <string name="singleton_http_server">Singleton HTTP Server</string>
    <string name="type_of_query">Type of query</string>
    <string name="post">POST</string>
    <string name="get">GET</string>
    <string name="raw">RAW</string>
    <string name="headers">Headers</string>
    <string name="query_body">Query body</string>
    <string name="send">Send</string>
    <string name="connection_refused">Connection refused</string>
    <string name="defalt_header">User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0\nAccept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\nAccept-Language: en-GB,en;q=0.5\nAccept-Encoding: gzip, deflate\nConnection: close\nCache-Control: max-age=0</string>
    <string name="swipe_menu_to_access_functions">Swipe menu or click me to access functions</string>
    <string name="edit_html">Edit HTML</string>
    <string name="send_a_query">Send a query</string>
    <string name="http_server_from_folder">HTTP Server from folder</string>
    <string name="title_activity_help">laCAT: Hello!</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="PNAME">laCAT_FLD</string>
    <string name="PFIELD">laCAT_First_time</string>
    <string name="logo">LOGO</string>
    <string name="click_me_or_swipe_to_open_navigation_bar">Click me or swipe to open navigation bar</string>
    <string name="help">HELP</string>
    <string name="close">Close</string>

</resources>
