<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.QueryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ipurlsend"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:hint="@string/ip_or_url"
            android:inputType="text|textUri" />
        <EditText
            android:id="@+id/portquery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="80"
            android:inputType="numberDecimal|number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/type_of_query" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/raw" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/sendquery"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/pbarQuery"/>
    <EditText
        android:id="@+id/queryheaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/headers"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:id="@+id/querycontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/query_body"
        android:inputType="textMultiLine"
        android:visibility="visible" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/queryoutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="textMultiLine"
        android:longClickable="false"
        android:visibility="visible"
        android:hint="Result"/>

</LinearLayout>