<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PingFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pingip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_or_url"
        android:inputType="textUri"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pingbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="1" />

            <TextView
                android:id="@+id/packnumnum"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/number_of_packets"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>
    <ProgressBar
        android:id="@+id/pBarPing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:id="@+id/pingoutput"
        android:focusable="false"
        android:longClickable="false"
        android:cursorVisible="false"/>

</LinearLayout>
